fix: text-align

--- a/src/components/NoDataSource/index.module.less
+++ b/src/components/NoDataSource/index.module.less
@@ -6,6 +6,7 @@
   width: 100%;
   height: 100%;
   max-height: 100vh;
+  text-align: center;
 }
 
 .img {
